# murts-cool-widgets

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md  meson.build
.github/workflows/: build.yaml
example/: bar.cpp  bar.css  meson.build
include/: application.hpp  window.hpp
include/control/: mpris.hpp  tray.hpp
include/model/: clock.hpp  dbus.hpp  menu.hpp  mpris.hpp  sni.hpp
include/source/: clock.hpp
include/utils/: Introspectable_proxy.hpp  WidgetName.hpp  css.hpp  fetch_image.hpp  icon.hpp
include/widget/: clock.hpp  menu.hpp  music.hpp  tray_item.hpp
protocol/: meson.build  org.kde.StatusNotifierItem.xml  org.kde.StatusNotifierWatcher.xml  org.mpris.MediaPlayer2.xml
src/: application.cpp  meson.build  window.cpp
src/control/: mpris.cpp  tray.cpp
src/model/: clock.cpp  dbus.cpp  menu.cpp  mpris.cpp  sni.cpp
src/source/: clock.cpp
src/utils/: Introspectable_proxy.cpp  WidgetName.cpp  css.cpp  fetch_image.cpp  icon.cpp
src/widget/: clock.cpp  menu.cpp  music.cpp  tray_item.cpp
subprojects/: gtkmm.wrap
