srcs = files(
  'model/clock.cpp',
  'model/mpris.cpp',
  'model/sni.cpp',
  'model/menu.cpp',
  'model/dbus.cpp',
  'widget/music.cpp',
  'widget/tray_item.cpp',
  'widget/menu.cpp',
  'control/tray.cpp',
  'control/mpris.cpp',
  'utils/WidgetName.cpp',
  'utils/fetch_image.cpp',
  'utils/css.cpp',
  'utils/icon.cpp',
  'utils/Introspectable_proxy.cpp'
)
